src/App.css
body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  background-color: #e9e9e9;
}

.container {
  margin: 0 auto;
 

  width: 100%;

  padding: 20px;
}

.row {
  display: flex;
}
img {
  width: 100%;
}
p {
  font-size: 14px;
  word-break: break-word;
}

.hidden {
  display: none;
}

.user-list {
  width: auto;

}

.user {
 
  width: 50%;
}



.user-card {
  background-color: #fff;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  margin: 10px;
  transition: 0.3s;
  cursor: pointer;
  border-radius: 10px;
  display: flex;
  flex-wrap: wrap;
  

 
 

}

.user-card:hover {
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.user-card__container {
  padding: 2px 16px;



  
}

.post-card {
  background-color: #fff;
  margin: 10px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  transition: 0.3s;
  border-radius: 10px;
}

.post-card:hover {
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.post-card__container {
  padding: 2px 16px;
}

.back-btn {
  color: #fff;
  background-color: black;
  border: none;
  border-radius: 10px;
  padding: 10px 20px;
  font-size: 20px;
  font-weight: 600;
  cursor: pointer;
}

.post {
  border: 1px solid black;
  background-color: white;
  margin: 20px;
}

.post__title {
  font-size: 12px;
  font-weight: bold;
  text-transform: uppercase;
  border-bottom: 1px solid black;
  padding: 8px;
}

.post__body {
  padding: 0 8px;
}

.post__search {
  margin-top: 16px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 20px;
}

.post__search--container {
  display: flex;
  flex-direction: column;
}

.post__search--label {
  padding-right: 8px;
}

select {
  background-color: #fff;
  border-radius: 4px;
  border: 1px solid #dcdfe6;
  color: #606266;
  height: 40px;
  line-height: 40px;
  outline: none;
  padding: 0 16px;
  width: 100%;
  max-width: 200px;
}
.movie--logo {
  width: 160px;
  filter: grayscale(1) invert(1);
}

.nav__list--img {
  display: flex;
  justify-content: start;
}

.movie__img {
  max-height: 320px;
  max-width: 250px;
  transition: all 300ms ease;
  
}


.movies__title {
  text-align: center;
  font-size: 40px;
  color: #242424;
  margin-top: 108px;
}
/* 
 
 LOADING STATE
 
 */

.movies__loading {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-top: 60px;
  font-size: 60px;
  color: #7342d6;
}

.fa-spinner {
  animation: rotate 600ms infinite linear;
}

.movies__loading--spinner {
  display: none !important;
}

.movies__loading .movies__loading--spinner {
  display: block !important;
}

@keyframes rotate {
  0% {
    transform: rotate(0);
  }

  100% {
    transform: rotate(360deg);
  }
}

/* 

FOOTER

*/

.nav__list {
  background-color: #242424;
  padding: 10px;
  margin-top: 100px;
}
.footer__list,
footer {
  background-color: #242424;
  padding: 10px;
  margin-top: 100px;
}

.footer__link,
.footer__copyright,
.nav__link {
  color: #fff;
}
.footer__copyright {
  padding: 20px;
  text-align: center;
  margin-bottom: 10px;
  align-items: center;
}
.footer__list {
  padding: 30px;
  margin: 0 auto;
  display: flex;
  justify-content: center;
  align-items: center;
}
.nav__list {
  padding: 30px;
  margin: 0 auto;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.footer__link {
  padding: 0 8px;
}
.nav__link {
  padding: 0 8px;
}

@media (max-width: 768px) {
  .nav__list {
    flex-direction: column;
  }
  .footer__list {
    flex-direction: column;
  }
  .nav__link,
  .footer__link {
    padding: 8px 0;
  }

}

@media (max-width: 1024px) {
  .nav__list {
    flex-direction: column;
  }
  .footer__list {
    flex-direction: column;
  }
  .nav__link,
  .footer__link {
    padding: 8px 0;
  }
}

/*

search bar

*/

.search-form {
  display: flex;
  justify-content: center;
  gap: 16px;
}

.search-form__input {
  padding: 8px;
  font-size: 16px;
}

.filter__wrap {
  display: flex;
  justify-content: flex-start;
  margin-left: 32px;
}
.filter, .filter--bold {
 font-weight: bold;
}

.filter:hover{
  opacity: 1;
  color: #000;
}

/*

Skeleton Loading

*/

.movie__title--skeleton {
  width: 80px;
  height: 12px;
  background-color: lightgray;
}

.movie__body--skeleton {
  width: 100%;
  height: 24px;
  background-color: lightgray;
}

.img__body--skeleton {
  width: 100%;
  height: 300px;
  background-color: gray;
}

